removed long outputs from nb1

--- a/EDA_and_model1.ipynb
+++ b/EDA_and_model1.ipynb
@@ -45,7 +45,6 @@
     "    for audio_file in os.listdir(DATA_DIR + filename):\n",
     "        files.append(filename + \"/\" + audio_file)\n",
     "\n",
-    "print(files)\n",
     "print(len(files))\n"
    ]
   },
@@ -70,7 +69,6 @@
     "    emotion = filename.split('/')[1].split('.')[0].split('-')[2]\n",
     "    labels.append(emotion)\n",
     "\n",
-    "print(labels)\n",
     "print(len(labels))"
    ]
   },
@@ -106,8 +104,7 @@
     }
    ],
    "source": [
-    "new_labels = [class_map[label] for label in labels]\n",
-    "print(new_labels)"
+    "new_labels = [class_map[label] for label in labels]"
    ]
   },
   {
